--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-browserify": "^3.12.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "three": "^0.173.0",
     "vercel": "^39.4.2",
     "vue": "^3.2.13"
   },
@@ -23,7 +24,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0"
   },
   "eslintConfig": {
     "root": true,
